MCADevOrg/src/objects/GRIDTabsSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Tab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fieldset_Name__c</fullName>
        <label>Fieldset Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageSize__c</fullName>
        <inlineHelpText>Maximum 20 records.</inlineHelpText>
        <label>PageSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TabIndex__c</fullName>
        <description>Holds the index on which the tab should be displayed.</description>
        <label>TabIndex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GRIDTabsSetting</label>
    <pluralLabel>GRIDTabsSettings</pluralLabel>
</CustomObject>